# ChangeLog for dev-lang/php
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/php/ChangeLog,v 1.947 2015/03/30 10:07:04 ago Exp $

  30 Mar 2015; Agostino Sarubbo <ago@gentoo.org> php-5.4.39.ebuild,
  php-5.5.23.ebuild:
  Stable for alpha, wrt bug #544186

  30 Mar 2015; Agostino Sarubbo <ago@gentoo.org> php-5.4.39.ebuild,
  php-5.5.23.ebuild:
  Stable for sparc, wrt bug #544186

  29 Mar 2015; Agostino Sarubbo <ago@gentoo.org> php-5.4.39.ebuild,
  php-5.5.23.ebuild:
  Stable for x86, wrt bug #544186

  28 Mar 2015; Jeroen Roovers <jer@gentoo.org> php-5.4.39.ebuild,
  php-5.5.23.ebuild:
  Stable for HPPA (bug #544186).

  27 Mar 2015; Agostino Sarubbo <ago@gentoo.org> php-5.4.39.ebuild,
  php-5.5.23.ebuild:
  Stable for amd64, wrt bug #544186

  26 Mar 2015; Agostino Sarubbo <ago@gentoo.org> php-5.4.38.ebuild,
  php-5.5.22.ebuild:
  Stable for ppc64, wrt bug #541098

  26 Mar 2015; Agostino Sarubbo <ago@gentoo.org> php-5.4.38.ebuild,
  php-5.5.22.ebuild:
  Stable for ppc, wrt bug #541098

  25 Mar 2015; Agostino Sarubbo <ago@gentoo.org> php-5.4.38.ebuild,
  php-5.5.22.ebuild:
  Stable for ia64, wrt bug #541098

*php-5.4.39 (20 Mar 2015)
*php-5.5.23 (20 Mar 2015)
*php-5.6.7 (20 Mar 2015)

  20 Mar 2015; Ole Markus With <olemarkus@gentoo.org> +php-5.4.39.ebuild,
  +php-5.5.23.ebuild, +php-5.6.7.ebuild:
  Version bumps

  17 Mar 2015; Andreas Schuerch <nativemad@gentoo.org> php-5.4.38.ebuild,
  php-5.5.22.ebuild:
  x86 stable, see bug 541098

  04 Mar 2015; Markus Meier <maekke@gentoo.org> php-5.5.22.ebuild:
  arm stable, bug #541098

  04 Mar 2015; Markus Meier <maekke@gentoo.org> php-5.4.38.ebuild:
  arm stable, bug #541098

  02 Mar 2015; Yixun Lan <dlan@gentoo.org> php-5.6.6.ebuild:
  add arm64 support, tested on A53 board

  26 Feb 2015; Jeroen Roovers <jer@gentoo.org> php-5.4.38.ebuild,
  php-5.5.22.ebuild:
  Stable for HPPA (bug #541098).
